--- a/index.html
+++ b/index.html
@@ -142,76 +142,6 @@
           </div>
         </div>
       </div>
-
-      <h3 class='pt-3'>Other Clients and Past Projects</h3>
-      <div class='row'>
-        <div class='col-sm-5'>
-          <p class='pb-3 lead'>These items are a collection of companies I've worked with, projects I've undertaken, and products I've helped launch. They include things like:</p>
-
-          <ul class='lead'>
-            <li>Brochure Websites</li>
-            <li>User Experience Design</li>
-            <li>App Development</li>
-            <li>Go to Market Strategy</li>
-            <li>MVP Design and Implementation</li>
-          </ul>
-        </div>
-        <div class='col-sm-7'>
-
-          <ul class='text-center list-inline w-md ms-auto me-auto'>
-            <li class='list-inline-item'>
-              <a href='https://hypepotamus.com/featured-events/startup-picture-day-summer-2019/' target='_blank' class='btn'>Startup Picture Day</a>
-            </li>
-            <li class='list-inline-item'>
-              <a href='https://www.trustsandcastle.com/' target='_blank' class='btn'>Sandcastle</a>
-            </li>
-            <li class='list-inline-item'>
-              <a href='https://www.shift.org/' target='_blank' class='btn'>Shift.org</a>
-            </li>
-            <li class='list-inline-item'>
-              <a href='https://app.jsmoneycoach.com/' target='_blank' class='btn'>JSMoney Coach</a>
-            </li>
-            <li class='list-inline-item'>
-              <a href='https://newstorycharity.org/' target='_blank' class='btn'>New Story</a>
-            </li>
-            <li class='list-inline-item'>
-              <a href='https://www.feefavor.com/' target='_blank' class='btn'>FeeFavor</a>
-            </li>
-            <li class='list-inline-item'>
-              <a href='https://www.dailylectio.net/' target='_blank' class='btn'>DailyLectio</a>
-            </li>
-            <li class='list-inline-item'>
-              <a href='https://simplygrants.com/' target='_blank' class='btn'>Simply Grants</a>
-            </li>
-            <li class='list-inline-item'>
-              <a href='https://www.cimienta.com/' target='_blank' class='btn'>Cimienta</a>
-            </li>
-            <li class='list-inline-item'>
-              <a href='https://www.investatlanta.com/' target='_blank' class='btn'>Invest Atlanta</a>
-            </li>
-            <li class='list-inline-item'>
-              <a href='https://loveatlanta.com/serve' target='_blank' class='btn'>Love Atlanta</a>
-            </li>
-            <li class='list-inline-item'>
-              <a href='https://www.blackgirlventures.org/' target='_blank' class='btn'>Black Girl Ventures</a>
-            </li>
-            <li class='list-inline-item'>
-              <a href='https://northpoint.org/' target='_blank' class='btn'>North Point Church</a>
-            </li>
-            <li class='list-inline-item'>
-              <a href='https://www.louiegiglio.com/' target='_blank' class='btn'>Louie Giglio</a>
-            </li>
-            <li class='list-inline-item'>
-              <a href='https://mattredman.com/' target='_blank' class='btn'>Matt Redman</a>
-            </li>
-            <li class='list-inline-item'>
-              <a href='https://passioncitychurch.com/' target='_blank' class='btn'>Passion City Church</a>
-            </li>
-            <li class='list-inline-item'>
-              <a href='https://passionconferences.com/' target='_blank' class='btn'>Passion Conference</a>
-            </li>
-          </ul>
-        </div>
       </div>
     </div>
   </section>
@@ -219,12 +149,12 @@
   <section id='about' class='p-section'>
     <div class='container container-lg'>
       <sup>About</sup>
-      <h2 class='mb-5 underline'>I am Morgan Lopes</h2>
+      <h2 class='mb-5 underline'>I am Zack Williams</h2>
 
       <div class='row flex-row'>
         <div class='col-sm-4'>
           <div class='p-3 sticky-top' style='top: 85px;'>
-            <img src="img/headshot.jpg" class='circle mb-3'>
+            <img src="img/headshot.png" class='circle mb-3'>
 
             <ul class='list-inline mb-0 text-center'>
               <li class='list-inline-item h4 mb-0 me-3'>
