--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </ul>
 
         <a target='_blank' href='https://www.linkedin.com/in/zackwilldev/' class='btn btn-primary'><i class="bi-linkedin"></i> Connect on Linkedin</a>
-        <a  target='_blank' href='https://calendly.com/zackwilldev/15-min' class='btn btn-primary'><i class="bi-calendar-event"></i> Schedule a Call</a>
+        <a target='_blank' href='https://calendly.com/zackwilldev/15-min' class='btn btn-primary'><i class="bi-calendar-event"></i> Schedule a Call</a>
         <a href='./ZackWilliamsResume2024.pdf' class='btn btn-primary'><i class="bi-download"></i> Download Resume</a>
         <a href='mailto:zackwilldev@gmail.com' class='btn btn-primary'><i class="bi-envelope"></i> Send Email</a>
       </div>
@@ -158,22 +158,17 @@
 
             <ul class='list-inline mb-0 text-center'>
               <li class='list-inline-item h4 mb-0 me-3'>
-                <a href='https://www.linkedin.com/in/morganjlopes/' target='_blank' class='text-light'>
+                <a href='https://www.linkedin.com/in/zackwilldev/' target='_blank' class='text-light'>
                   <i class="bi-linkedin"></i>
                 </a>
               </li>
               <li class='list-inline-item h4 mb-0 me-3'>
-                <a href='https://github.com/morganjlopes' target='_blank' class='text-light'>
+                <a href='https://github.com/zackattax' target='_blank' class='text-light'>
                   <i class="bi-github"></i>
                 </a>
               </li>
               <li class='list-inline-item h4 mb-0 me-3'>
-                <a href='https://twitter.com/MorganJLopes' target='_blank' class='text-light'>
-                  <i class="bi-twitter"></i>
-                </a>
-              </li>
-              <li class='list-inline-item h4 mb-0 me-3'>
-                <a href='https://www.instagram.com/morganjlopes/' target='_blank' class='text-light'>
+                <a href='https://www.instagram.com/z_attax/' target='_blank' class='text-light'>
                   <i class="bi-instagram"></i>
                 </a>
               </li>
@@ -348,15 +343,15 @@
       <p class='w-sm ms-auto me-auto lead'>Hey! There is no better way to get to know each other than a chat. You set the agenda or we can start with these talking points:</p>
 
       <ul class='list-unstyled lead'>
-        <li>Coffee (The bougier the better)</li>
-        <li>Running (I'm training for an Ultra)</li>
-        <li>Reading (Fiction, nonfiction... all of it)</li>
-        <li>Moonlanding</li>
+        <li>Coffee (That I roasted myself)</li>
+        <li>Cycling(Road MTB Gravel love it all)</li>
+        <li>Electronic Music (STS9 is my fav with Pretty Lights close behind)</li>
+        <li>Cocktails(former pro turned hobbyest </li>
       </ul>
 
       <div class='mt-5'>
-        <a target='_blank' href='https://www.linkedin.com/in/morganjlopes/' class='btn btn-primary'><i class="bi-linkedin"></i> Connect on Linkedin</a>
-        <!-- <a  target='_blank' href='https://calendly.com/morganjlopes/call' class='btn btn-primary'><i class="bi-calendar-event"></i> Schedule a Call</a> -->
+        <a target='_blank' href='https://www.linkedin.com/in/zackwilldev/' class='btn btn-primary'><i class="bi-linkedin"></i> Connect on Linkedin</a>
+        <a  target='_blank' href='https://calendly.com/zackwilldev/15-min' class='btn btn-primary'><i class="bi-calendar-event"></i> Schedule a Call</a>
         <!-- <a href='#' class='btn btn-primary'><i class="bi-download"></i> Download Resume</a> -->
         <!-- <a href='mailto:' class='btn btn-primary'><i class="bi-envelope"></i> Send Email</a> -->
       </div>
@@ -366,37 +361,22 @@
   <footer class='bg-black p-5 text-white'>
     <div class='container'>
       <div class='row'>
-        <div class='col-sm-6'>
-          <p>
-            Built on <a href='https://getbootstrap.com/' target='_blank' class='text-white'>Bootstrap</a> and Developed by <a href='https://www.morganjlopes.com/' target='_blank' class='text-white'>Morgan J Lopes</a>
-          </p>
-        </div>
 
         <div class='col-sm-6'>
           <ul class='list-inline float-end'>
             <li class='list-inline-item h4 mb-0 me-3'>
-              <a href='https://www.linkedin.com/in/morganjlopes/' target='_blank' class='text-light'>
+              <a href='https://www.linkedin.com/in/zackwilldev/' target='_blank' class='text-light'>
                 <i class="bi-linkedin"></i>
               </a>
             </li>
             <li class='list-inline-item h4 mb-0 me-3'>
-              <a href='https://github.com/morganjlopes' target='_blank' class='text-light'>
+              <a href='https://github.com/zackattax' target='_blank' class='text-light'>
                 <i class="bi-github"></i>
               </a>
             </li>
             <li class='list-inline-item h4 mb-0 me-3'>
-              <a href='https://twitter.com/MorganJLopes' target='_blank' class='text-light'>
-                <i class="bi-twitter"></i>
-              </a>
-            </li>
-            <li class='list-inline-item h4 mb-0 me-3'>
-              <a href='https://www.instagram.com/morganjlopes/' target='_blank' class='text-light'>
+              <a href='https://www.instagram.com/z_attax/' target='_blank' class='text-light'>
                 <i class="bi-instagram"></i>
-              </a>
-            </li>
-            <li class='list-inline-item h4 mb-0 me-3'>
-              <a href='https://www.morganjlopes.com/' target='_blank' class='text-light'>
-                <i class="bi-rss"></i>
               </a>
             </li>
           </ul>
