--- a/index.html
+++ b/index.html
@@ -217,13 +217,15 @@
         <div class='col-sm-4'>
           <div class='p-3'>
             <div class=''>
-              <blockquote class='quotation'>“Final product <span class='marker-highlight'>exceeded</span> my expectations”</blockquote>
-              <p class='lead'>We worked on both a website and then later on a companion iOS App. Great to work with, easy communications, and the final product exceeded my expectations.</p>
+              <!-- <blockquote class='quotation'>“Final product <span class='marker-highlight'>exceeded</span> my expectations”</blockquote> -->
+              <p class='lead'>Working alongside Zack has been one of the greatest pleasures of my software engineering career thus far. Not only is he a good team member, but he approaches complex problems with humility, dedication, and a good sense of humor. 
+                He thinks outside of the box, and is skilled in Ruby on Rails, React, and JavaScript. 
+                Having Zack work along side you is a privilege and he will bring value to any team he is on.</p>
             </div>
             <div class=''>
-              <img src="img/testimonial-scott.jpeg" class='circle testimonial-image'>
-              <h3 class='pt-3'>Scott</h3>
-              <em>Web, iOS, and Android App</a></em>
+              <img src="img/testimonial-elias.jpeg" class='circle testimonial-image'>
+              <h3 class='pt-3'>Elias</h3>
+              <em>Full-stack Developer, American Alpine Club</a></em>
             </div>
           </div>
         </div>
@@ -231,18 +233,18 @@
         <div class='col-sm-4'>
           <div class='p-3'>
             <div class=''>
-              <blockquote class='quotation'>“Doing great things by helping build strong minds”</blockquote>
-              <p class='lead'>Morgan Lopes is a man doing great things by helping build strong minds ready for the dynamic world of problem solving. In a time where pedagogical learning seems to be fading, Morgan steps in to bring <span class='marker-highlight'>confidence</span> to future developers and problem solvers willing to listen!</p>
+              <!-- <blockquote class='quotation'>“Doing great things by helping build strong minds”</blockquote> -->
+              <p class='lead'>Zack is a true testament to the value and drive that an earlier-in-their-career engineer can bring to a team and I’d be excited to work with him again.</p>
             </div>
             <div class=''>
-              <img src="img/testimonial-one.png" class='circle testimonial-image'>
-              <h3 class='pt-3'>Code School Student</h3>
-              <em>Presentation Feedback</em>
+              <img src="img/dave-worth.png" class='circle testimonial-image'>
+              <h3 class='pt-3'>David Worth</h3>
+              <em>Vice President of Engineering, Statype</em>
             </div>
           </div>
         </div>
 
-        <div class='col-sm-4'>
+        <!-- <div class='col-sm-4'>
           <div class='p-3'>
             <div class=''>
               <blockquote class='quotation'>“Transparent, professional, and good...”</blockquote>
@@ -254,7 +256,7 @@
               <em>Three Sided Marketplace</em>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
 
     </div>
