--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
               <p class='lead'>Zack is a true testament to the value and drive that an earlier-in-their-career engineer can bring to a team and I’d be excited to work with him again.</p>
             </div>
             <div class=''>
-              <img src="img/dave-worth.png" class='circle testimonial-image'>
+              <img src="img/dave-worth.jpeg" class='circle testimonial-image'>
               <h3 class='pt-3'>David Worth</h3>
               <em>Vice President of Engineering, Statype</em>
             </div>
