fix call to action

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
         </ul>
 
         <a target='_blank' href='https://www.linkedin.com/in/zackwilldev/' class='btn btn-primary'><i class="bi-linkedin"></i> Connect on Linkedin</a>
-        <a target='_blank' href='https://calendly.com/zackwilldev/15-min' class='btn btn-primary'><i class="bi-calendar-event"></i> Schedule a Call</a>
-        <a href='./ZackWilliamsResume2024.pdf' class='btn btn-primary'><i class="bi-download"></i> Download Resume</a>
-        <a href='mailto:zackwilldev@gmail.com' class='btn btn-primary'><i class="bi-envelope"></i> Send Email</a>
+        <!-- <a target='_blank' href='https://calendly.com/zackwilldev/15-min' class='btn btn-primary'><i class="bi-calendar-event"></i> Schedule a Call</a> -->
+        <!-- <a href='./ZackWilliamsResume2024.pdf' class='btn btn-primary'><i class="bi-download"></i> Download Resume</a> -->
+        <!-- <a href='mailto:zackwilldev@gmail.com' class='btn btn-primary'><i class="bi-envelope"></i> Send Email</a> -->
       </div>
     </div>
   </nav>
