--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
           </li>
         </ul>
 
-        <a target='_blank' href='https://www.linkedin.com/in/zackwilldev/' class='btn btn-primary'><i class="bi-linkedin"></i> Connect on Linkedin</a>
+        <!-- <a target='_blank' href='https://www.linkedin.com/in/zackwilldev/' class='btn btn-primary'><i class="bi-linkedin"></i> Connect on Linkedin</a> -->
         <!-- <a target='_blank' href='https://calendly.com/zackwilldev/15-min' class='btn btn-primary'><i class="bi-calendar-event"></i> Schedule a Call</a> -->
         <!-- <a href='./ZackWilliamsResume2024.pdf' class='btn btn-primary'><i class="bi-download"></i> Download Resume</a> -->
-        <!-- <a href='mailto:zackwilldev@gmail.com' class='btn btn-primary'><i class="bi-envelope"></i> Send Email</a> -->
+        <a href='mailto:zackwilldev@gmail.com' class='btn btn-primary'><i class="bi-envelope"></i> Send Email</a>
       </div>
     </div>
   </nav>
@@ -51,10 +51,10 @@
           <h1>Combining <span class='marker-highlight'>technology</span> and creative <span class='marker-highlight'>problem-solving</span> to positively impact others.</h1>
           <p class='lead mb-5'>I use technology to connect people and help others reach their full potential.</p>
 
-          <a target='_blank' href='https://www.linkedin.com/in/zackwilldev/' class='btn btn-primary'><i class="bi-linkedin"></i> Connect on Linkedin</a>
+          <!-- <a target='_blank' href='https://www.linkedin.com/in/zackwilldev/' class='btn btn-primary'><i class="bi-linkedin"></i> Connect on Linkedin</a> -->
           <a  target='_blank' href='https://calendly.com/zackwilldev/15-min' class='btn btn-primary'><i class="bi-calendar-event"></i> Schedule a Call</a>
-          <a href='./ZackWilliamsResume2024.pdf' class='btn btn-primary'><i class="bi-download"></i> Download Resume</a>
-          <a href='mailto:zackwilldev' class='btn btn-primary'><i class="bi-envelope"></i> Send Email</a>
+          <!-- <a href='./ZackWilliamsResume2024.pdf' class='btn btn-primary'><i class="bi-download"></i> Download Resume</a> -->
+          <!-- <a href='mailto:zackwilldev' class='btn btn-primary'><i class="bi-envelope"></i> Send Email</a> -->
         </div>
       </div>
     </div>
@@ -78,7 +78,7 @@
     </div>
   </section>
 
-  <section id='portfolio' class='p-section bg-light'>
+  <!-- <section id='portfolio' class='p-section bg-light'>
     <div class='container'>
       <sup>Portfolio</sup>
       <h2 class='mb-5 underline'>Featured Work</h2>
@@ -144,7 +144,7 @@
       </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <section id='about' class='p-section'>
     <div class='container container-lg'>
@@ -192,9 +192,9 @@
 
           <ul class='lead'>
             <li><span class='marker-highlight'>Ruby on Rails</span></li>
-            <li>Github</li>
-            <li>Heroku</li>
-            <li>AWS</li>
+            <li>Elixir</li>
+            <li>Fly.io</li>
+            <li>JavaScript</li>
           </ul>
 
           <div class='mt-5'>
@@ -262,7 +262,7 @@
     </div>
   </section>
 
-  <section class='bg-dark text-white section-inverse'>
+  <!-- <section class='bg-dark text-white section-inverse'>
     <div class='container'>
       <div class='bg-primary p-5 card'>
         <h2 class='mb-5 text-center underline'>Shipping More Than Code</h2>
@@ -334,7 +334,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <section id='contact' class='p-section-lg bg-dark text-white'>
     <div class='container container-lg text-center'>
