--- a/index.html
+++ b/index.html
@@ -172,21 +172,16 @@
                   <i class="bi-instagram"></i>
                 </a>
               </li>
-              <li class='list-inline-item h4 mb-0 me-3'>
-                <a href='https://www.morganjlopes.com/' target='_blank' class='text-light'>
-                  <i class="bi-rss"></i>
-                </a>
-              </li>
             </ul>
           </div>
         </div>
         <div class='col-sm-8'>
-          <blockquote>Actively writing code and building high-functioning teams.</blockquote>
+          <blockquote>Actively writing code and learning new technologies.</blockquote>
 
-          <img src="img/github-activity.png" class='mb-3'>
+          <!-- <img src="img/github-activity.png" class='mb-3'> -->
 
-          <p class='lead'>Thought-filled software engineer and entrepreneur who understands that deliberate, <span class='marker-highlight'>consistent progress</span> over time is life's greatest growth strategy.</p>
-          <p class='lead'>Regardless of his job titles, Morgan sees leadership as a choice, not a rank. He strives to make that choice daily and challenges others to do the same. Currently serving as CTO at <span class='marker-highlight'>Fast Company's World Most Innovative Company</span> (x4), consulting startup founders, and Launching Book ("Code School") to help more people transition into tech.</p>
+          <p class='lead'>Thought-filled software engineer who understands that deliberate, <span class='marker-highlight'>consistent progress</span> over time is life's greatest growth strategy.</p>
+          <p class='lead'>He strives to make that choice daily and challenges others to do the same.</p>
           
           <p class='lead mb-0'>Favorite Tools:</p>
 
