--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
       <p class='w-sm ms-auto me-auto lead'>Hey! There is no better way to get to know each other than a chat. You set the agenda or we can start with these talking points:</p>
 
       <ul class='list-unstyled lead'>
-        <li>Coffee (That I roasted myself)</li>
+        <li>Coffee (I'm a home roaster!)</li>
         <li>Cycling(Road MTB Gravel love it all)</li>
         <li>Electronic Music (STS9 is my fav with Pretty Lights close behind)</li>
         <li>Cocktails(former pro turned hobbyest </li>
