--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
         <li>Coffee (I'm a home roaster!)</li>
         <li>Cycling(Road MTB Gravel love it all)</li>
         <li>Electronic Music (STS9 is my fav with Pretty Lights close behind)</li>
-        <li>Cocktails(former pro turned hobbyest </li>
+        <li>Cocktails(former pro turned hobbyest) </li>
       </ul>
 
       <div class='mt-5'>
