remove portfolio link

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 me-3">
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" href="#portfolio">Work</a>
-          </li>
+          </li> -->
           <li class="nav-item">
             <a class="nav-link" href="#about">About</a>
           </li>
