add employer name

--- a/index.html
+++ b/index.html
@@ -67,12 +67,15 @@
       <div class='row justify-content-center d-flex align-items-center'>
         <div class='col-2'>
           <img src="img/flatiron-logo.jpeg" class='px-3'>
+          <p>Flatiron School</p>
         </div>
         <div class='col-2'>
           <img src="img/statype-logo.svg" class='px-3'>
+          <p>Statype</p>
         </div>
         <div class='col-2'>
           <img src="img/gannett_logo.jpeg" class='px-3'>
+          <p>Gannett</p>
         </div>
       </div>
     </div>
