--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <p>Flatiron School</p>
         </div>
         <div class='col-2'>
-          <img src="img/statype-logo.svg" class='px-3'>
+          <img src="img/statype-logo.jpeg" class='px-3'>
           <p>Statype</p>
         </div>
         <div class='col-2'>
