--- a/index.html
+++ b/index.html
@@ -161,17 +161,17 @@
 
             <ul class='list-inline mb-0 text-center'>
               <li class='list-inline-item h4 mb-0 me-3'>
-                <a href='https://www.linkedin.com/in/zackwilldev/' target='_blank' class='text-light'>
+                <a href='https://www.linkedin.com/in/zackwilldev/' target='_blank' class=''>
                   <i class="bi-linkedin"></i>
                 </a>
               </li>
               <li class='list-inline-item h4 mb-0 me-3'>
-                <a href='https://github.com/zackattax' target='_blank' class='text-light'>
+                <a href='https://github.com/zackattax' target='_blank' class=''>
                   <i class="bi-github"></i>
                 </a>
               </li>
               <li class='list-inline-item h4 mb-0 me-3'>
-                <a href='https://www.instagram.com/z_attax/' target='_blank' class='text-light'>
+                <a href='https://www.instagram.com/z_attax/' target='_blank' class=''>
                   <i class="bi-instagram"></i>
                 </a>
               </li>
