--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
             <ul class='list-inline mb-0 text-center'>
               <li class='list-inline-item h4 mb-0 me-3'>
-                <a href='https://www.linkedin.com/in/zackwilldev/' target='_blank' class=''>
+                <a href='https://www.linkedin.com/in/zackwilldev/' target='_blank' class='text-light'>
                   <i class="bi-linkedin"></i>
                 </a>
               </li>
@@ -171,7 +171,7 @@
                 </a>
               </li>
               <li class='list-inline-item h4 mb-0 me-3'>
-                <a href='https://www.instagram.com/z_attax/' target='_blank' class=''>
+                <a href='https://www.instagram.com/z_attax/' target='_blank' class='text-light'>
                   <i class="bi-instagram"></i>
                 </a>
               </li>
